# CXLMemSim

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE  README.md  conanfile.txt  perf.data  rdma_config.h.in
.github/workflows/: cmake.yml
allocator/: CMakeLists.txt  alloc.cpp
allocator/jemalloc/: CMakeLists.txt  jemalloc_internal_defs.h.in
allocator/jemalloc/include/jemalloc/internal/: jemalloc_preamble.h.in
artifact/: build_and_run_all.sh  compare_with_gem5.sh  dmesg.txt  dmidecode.txt  gen_workloads.sh  lspci.txt  mlc-lunarlake.txt  mlc-sapphirerapids.txt  mlc.txt  run_gromacs.sh  uprobe.txt
artifact/agentic_bias/: agentic_bias_compare.csv  cxlmemsim_server.pid  qemu_type2.pid
artifact/hitm_compare/: cxl_hitm_64lines_gran4096.txt  cxl_hitm_64lines_gran64.txt
cmake/: SlugAllocator.cmake
fpga/: delayed_buffer.patch
gem5_integration/: run.py
include/: alloc.h  bpftimeruntime.h  coherency_engine.h  cxl_backend.h  cxlcontroller.h  cxlcounter.h  cxlendpoint.h  cxlregion.h  dcd_gfam.h  distributed_server.h  hdm_decoder.h  helper.h  incore.h  info.h  inscounter.h  lbr.h  logging.h  monitor.h  pebs.h  perf.h  policy.h  rdma_communication.h  rob.h  shared_memory_manager.h  shm_communication.h  sock.h  ssd_streaming_backend.h  tcp_communication.h  uncore.h  vmlinux.h  wasm_bridge.h
microbench/: CMakeLists.txt  branch_simple.c  bw.cpp  cache-miss.c  cache-thrash.c  cxl_switch_lock_bench.c  cxltester.c  dax_litmus_common.h  dax_usage_example.c  daxreader.c  daxwriter.c  dot_product.c  ld.cpp  ld_base.cpp  ld_nt.cpp  ld_nt_serial.cpp  ld_serial.cpp  ld_simple.cpp  malloc.c  many_calloc.c  many_malloc.c  many_mmap.c  many_mmap_read.c  many_sbrk.c  mmap_write.c  nt-ld.cpp  nt-st.cpp  ptr-chasing.cpp  sbrk.c  simple-loop-no-dep.c  simple-loop.c  st.cpp  st_serial.cpp  test_dax_litmus_atomic.c  test_dax_litmus_mp.c  test_dax_litmus_sb.c  test_dax_litmus_tearing.c  test_reader.c  test_writer.c  thread.cpp  (+2 more)
packaging/homebrew-tap/: README.md  install-local.sh
qemu_integration/: CMakeLists.txt  README.md  cxl-numa-setup.service  dax_stream_bench.c  guest_gpu_test.c  launch_qemu_cxl.sh  launch_qemu_cxl1.sh  launch_qemu_cxl2.sh  launch_qemu_cxl3.sh  launch_qemu_cxl4.sh  launch_qemu_cxl5.sh  launch_qemu_cxl6.sh  launch_qemu_cxl7.sh  launch_qemu_cxl_usernet.sh  launch_qemu_type2_gpu.sh  launch_qemu_type2_hetgpu.sh  launch_qemu_type2_multigpu.sh  launch_qemu_vcs_dcd_gfam.sh  restart_vms_shared.sh  setup_cxl_numa.sh  smoke_type2_endpoint.sh  ssd_stream_two_qemu_bench.sh  start_server.sh  test_concurrent.sh  test_cxl_mem.c  test_kbd_hook.c  test_setup_cxl_numa.sh  test_shared_memory.sh  topology_simple.txt  use_kbd_hook.sh  zettai_benchmark.sh  zettai_guest_dcd_gfam_test.sh  zettai_host_dcd_gfam_test.py  zettai_linux_aliases.sh  zettai_tmatmul_ctl.c
qemu_integration/guest_libcuda/: Makefile  agentic_bias_benchmark.c  coherency.c  cpu_gpu_hitm_benchmark.c  cuda_advanced_test.c  cuda_test.c  cxl_bar_benchmark.c  cxl_bias_benchmark.c  cxl_coherent_test.c  cxl_gpu_cmd.h  cxl_pointer_sharing_test.c  gpu_benchmark.c  gpu_validation_bench.c  libcuda.c  p2p_test.c  plot_results.py  rq1_graph_bfs.c  rq2_dir_sizing.c  rq3_bias_kv.c  rq4_alloc_policy.c  rq4_devfrac_sweep.c  rq_mini_test.c
qemu_integration/include/: qemu_cxl_memsim.h
qemu_integration/src/: cxlmemsim_server.cpp  cxlmemsim_server_rdma.cpp  cxlmemsim_server_simple.cpp  qemu_cxl_memsim.c  qemu_init_wrapper.c
script/: README_calibration.md  apply_calibration.py  build_qemu.sh  calibrate_example.sh  calibrate_memory_latency.py  cleanup_cxl_dax.sh  collect_weights.py  cxlmemsim_slug.py  draw_vector_workload_graph.py  dump_pmu.py  get_all_results.py  get_gem5_slowdown.py  get_latency.py  get_number.py  get_pebs.py  get_policy.py  get_slowdown.py  gromacs.py  ipc_rob_result.py  ld_base_result.py  ld_base_results_local.csv  ld_plot_result.py  ld_pmu128_results.csv  ld_pmu16_results.csv  ld_pmu1_results.csv  ld_pmu256_results.csv  ld_pmu2_results.csv  ld_pmu32_results.csv  ld_pmu4_results.csv  ld_pmu64_results.csv  ld_pmu8_results.csv  ld_result.py  ld_results.csv  ld_results_local.csv  ld_results_local_noprefetch.csv  ld_results_remote.csv  ld_results_remote_0.0ns.csv  ld_results_remote_160.0ns.csv  ld_results_remote_320.0ns.csv  ld_results_remote_640.0ns.csv  (+38 more)
scripts/: setup_rdma.sh  start_cxlmemsim_with_qemu.sh  test_rdma.sh
src/: bpftimeruntime.cpp  bw.cpp  calculateLatency.cc  coherency_engine.cpp  collectmmap.c  cxlcontroller.cpp  cxlcounter.cpp  cxlendpoint.cpp  cxlmemsim.bpf.c  cxlmemsim.json  cxlregion.cpp  dcd_gfam.cpp  distributed_server.cpp  hdm_decoder.cpp  helper.cpp  incore.cpp  info.cpp  inscounter.cpp  lbr.cpp  logging.cpp  main-test.cc  main.cc  main.cpp  main_server.cc  module.cc  monitor.cpp  pebs.cpp  perf.cpp  policy.cpp  rdma_communication.cpp  rob.cc  rob.cpp  shared_memory_manager.cc  shared_memory_manager.h  shm_communication.cpp  sock.cc  ssd_streaming_backend.cpp  tcp_communication.cpp  test_mem_stall.cc  test_rob.cc  (+2 more)
tests/: run_distributed_shm_test.sh  test_back_invalidation.cpp  test_bandwidth_model.cpp  test_dax_back_invalidation.cpp  test_dcd_gfam.cpp  test_distributed_shm.cpp  test_mem_stall.cc  test_rob.cc  test_wasm_bridge.cpp  test_wasm_heap_backend.cpp
tools/faiss_splash/: faiss_cpu_splash.cpp
tools/mig_nccl_hitm/: run_compare.sh  (+1 more)
use_cases/: README.md  plot_switch_accuracy.py  run_all_demos.sh  run_all_examples.sh  run_switch_experiment.sh  switch_accuracy.py  test_use_cases.py
web/: README.md  cxlmemsim-pool-worker.js
workloads/: CMakeLists.txt  memcached-YCSB.c  memcached-YCSB.cpp
workloads/MLC/: firmware-info.txt  redist.txt
workloads/gromacs/: Makefile  Makefile.tests  README.md  build.sh  mpi_cxl_shim.c  run_gromacs_cxl.sh  run_mpi_with_cxl.sh  test_collectives.c  test_dax_sharing.sh  test_mpi_cxl.c  test_mpi_hook.c  test_onesided.c  test_p2p.c
workloads/mcf/: inp.in  mcf_r_base.base-m64
workloads/wrf/: OBS_DOMAIN101  OBS_DOMAIN201  VEGPARM.TBL  libhdf5_hl.so.310  libnetcdf.so.19  libnetcdff.so.7  namelist.input  namelist.output  wrfsfdda_d01
(+684 files in other folders)
