add_executable(calloc calloc.c)
add_executable(mmap_read mmap_read.c)
add_executable(mmap_write mmap_write.c)
add_executable(malloc malloc.c)
add_executable(sbrk sbrk.c)

add_executable(ld_simple ld_simple.cpp)
add_executable(nt-ld nt-ld.cpp)
add_executable(nt-st nt-st.cpp)
add_executable(ptr-chasing ptr-chasing.cpp)
add_executable(branch_simple branch_simple.c)
add_executable(cache-thrash cache-thrash.c)
add_executable(cache-miss cache-miss.c)
add_executable(thread thread.cpp)

add_executable(ld1 ld.cpp)
target_compile_definitions(ld1 PRIVATE -DFENCE_COUNT=1)
add_executable(ld2 ld.cpp)
target_compile_definitions(ld2 PRIVATE -DFENCE_COUNT=2)
add_executable(ld4 ld.cpp)
target_compile_definitions(ld4 PRIVATE -DFENCE_COUNT=4)
add_executable(ld8 ld.cpp)
target_compile_definitions(ld8 PRIVATE -DFENCE_COUNT=8)
add_executable(ld16 ld.cpp)
target_compile_definitions(ld16 PRIVATE -DFENCE_COUNT=16)
add_executable(ld32 ld.cpp)
target_compile_definitions(ld32 PRIVATE -DFENCE_COUNT=32)
add_executable(ld64 ld.cpp)
target_compile_definitions(ld64 PRIVATE -DFENCE_COUNT=64)
add_executable(ld128 ld.cpp)
target_compile_definitions(ld128 PRIVATE -DFENCE_COUNT=128)
add_executable(ld256 ld.cpp)
target_compile_definitions(ld256 PRIVATE -DFENCE_COUNT=256)

add_executable(ld_serial1 ld_serial.cpp)
target_compile_definitions(ld_serial1 PRIVATE -DFENCE_COUNT=1)
add_executable(ld_serial2 ld_serial.cpp)
target_compile_definitions(ld_serial2 PRIVATE -DFENCE_COUNT=2)
add_executable(ld_serial4 ld_serial.cpp)
target_compile_definitions(ld_serial4 PRIVATE -DFENCE_COUNT=4)
add_executable(ld_serial8 ld_serial.cpp)
target_compile_definitions(ld_serial8 PRIVATE -DFENCE_COUNT=8)
add_executable(ld_serial16 ld_serial.cpp)
target_compile_definitions(ld_serial16 PRIVATE -DFENCE_COUNT=16)
add_executable(ld_serial32 ld_serial.cpp)
target_compile_definitions(ld_serial32 PRIVATE -DFENCE_COUNT=32)
add_executable(ld_serial64 ld_serial.cpp)
target_compile_definitions(ld_serial64 PRIVATE -DFENCE_COUNT=64)
add_executable(ld_serial128 ld_serial.cpp)
target_compile_definitions(ld_serial128 PRIVATE -DFENCE_COUNT=128)
add_executable(ld_serial256 ld_serial.cpp)
target_compile_definitions(ld_serial256 PRIVATE -DFENCE_COUNT=256)

add_executable(ld_nt1 ld_nt.cpp)
target_compile_definitions(ld_nt1 PRIVATE -DFENCE_COUNT=1)
add_executable(ld_nt2 ld_nt.cpp)
target_compile_definitions(ld_nt2 PRIVATE -DFENCE_COUNT=2)
add_executable(ld_nt4 ld_nt.cpp)
target_compile_definitions(ld_nt4 PRIVATE -DFENCE_COUNT=4)
add_executable(ld_nt8 ld_nt.cpp)
target_compile_definitions(ld_nt8 PRIVATE -DFENCE_COUNT=8)
add_executable(ld_nt16 ld_nt.cpp)
target_compile_definitions(ld_nt16 PRIVATE -DFENCE_COUNT=16)
add_executable(ld_nt32 ld_nt.cpp)
target_compile_definitions(ld_nt32 PRIVATE -DFENCE_COUNT=32)
add_executable(ld_nt64 ld_nt.cpp)
target_compile_definitions(ld_nt64 PRIVATE -DFENCE_COUNT=64)
add_executable(ld_nt128 ld_nt.cpp)
target_compile_definitions(ld_nt128 PRIVATE -DFENCE_COUNT=128)
add_executable(ld_nt256 ld_nt.cpp)
target_compile_definitions(ld_nt256 PRIVATE -DFENCE_COUNT=256)

add_executable(ld_nt_serial1 ld_nt_serial.cpp)
target_compile_definitions(ld_nt_serial1 PRIVATE -DFENCE_COUNT=1)
add_executable(ld_nt_serial2 ld_nt_serial.cpp)
target_compile_definitions(ld_nt_serial2 PRIVATE -DFENCE_COUNT=2)
add_executable(ld_nt_serial4 ld_nt_serial.cpp)
target_compile_definitions(ld_nt_serial4 PRIVATE -DFENCE_COUNT=4)
add_executable(ld_nt_serial8 ld_nt_serial.cpp)
target_compile_definitions(ld_nt_serial8 PRIVATE -DFENCE_COUNT=8)
add_executable(ld_nt_serial16 ld_nt_serial.cpp)
target_compile_definitions(ld_nt_serial16 PRIVATE -DFENCE_COUNT=16)
add_executable(ld_nt_serial32 ld_nt_serial.cpp)
target_compile_definitions(ld_nt_serial32 PRIVATE -DFENCE_COUNT=32)
add_executable(ld_nt_serial64 ld_nt_serial.cpp)
target_compile_definitions(ld_nt_serial64 PRIVATE -DFENCE_COUNT=64)
add_executable(ld_nt_serial128 ld_nt_serial.cpp)
target_compile_definitions(ld_nt_serial128 PRIVATE -DFENCE_COUNT=128)
add_executable(ld_nt_serial256 ld_nt_serial.cpp)
target_compile_definitions(ld_nt_serial256 PRIVATE -DFENCE_COUNT=256)

add_executable(ld_base1 ld_base.cpp)
target_compile_definitions(ld_base1 PRIVATE -DFENCE_COUNT=1)
add_executable(ld_base2 ld_base.cpp)
target_compile_definitions(ld_base2 PRIVATE -DFENCE_COUNT=2)
add_executable(ld_base4 ld_base.cpp)
target_compile_definitions(ld_base4 PRIVATE -DFENCE_COUNT=4)
add_executable(ld_base8 ld_base.cpp)
target_compile_definitions(ld_base8 PRIVATE -DFENCE_COUNT=8)
add_executable(ld_base16 ld_base.cpp)
target_compile_definitions(ld_base16 PRIVATE -DFENCE_COUNT=16)
add_executable(ld_base32 ld_base.cpp)
target_compile_definitions(ld_base32 PRIVATE -DFENCE_COUNT=32)
add_executable(ld_base64 ld_base.cpp)
target_compile_definitions(ld_base64 PRIVATE -DFENCE_COUNT=64)
add_executable(ld_base128 ld_base.cpp)
target_compile_definitions(ld_base128 PRIVATE -DFENCE_COUNT=128)
add_executable(ld_base256 ld_base.cpp)
target_compile_definitions(ld_base256 PRIVATE -DFENCE_COUNT=256)

add_executable(st1 st.cpp)
target_compile_definitions(st1 PRIVATE -DFENCE_COUNT=1)
add_executable(st2 st.cpp)
target_compile_definitions(st2 PRIVATE -DFENCE_COUNT=2)
add_executable(st4 st.cpp)
target_compile_definitions(st4 PRIVATE -DFENCE_COUNT=4)
add_executable(st8 st.cpp)
target_compile_definitions(st8 PRIVATE -DFENCE_COUNT=8)
add_executable(st16 st.cpp)
target_compile_definitions(st16 PRIVATE -DFENCE_COUNT=16)
add_executable(st32 st.cpp)
target_compile_definitions(st32 PRIVATE -DFENCE_COUNT=32)
add_executable(st64 st.cpp)
target_compile_definitions(st64 PRIVATE -DFENCE_COUNT=64)
add_executable(st128 st.cpp)
target_compile_definitions(st128 PRIVATE -DFENCE_COUNT=128)
add_executable(st256 st.cpp)
target_compile_definitions(st256 PRIVATE -DFENCE_COUNT=256)

add_executable(st_serial1 st_serial.cpp)
target_compile_definitions(st_serial1 PRIVATE -DFENCE_COUNT=1)
add_executable(st_serial2 st_serial.cpp)
target_compile_definitions(st_serial2 PRIVATE -DFENCE_COUNT=2)
add_executable(st_serial4 st_serial.cpp)
target_compile_definitions(st_serial4 PRIVATE -DFENCE_COUNT=4)
add_executable(st_serial8 st_serial.cpp)
target_compile_definitions(st_serial8 PRIVATE -DFENCE_COUNT=8)
add_executable(st_serial16 st_serial.cpp)
target_compile_definitions(st_serial16 PRIVATE -DFENCE_COUNT=16)
add_executable(st_serial32 st_serial.cpp)
target_compile_definitions(st_serial32 PRIVATE -DFENCE_COUNT=32)
add_executable(st_serial64 st_serial.cpp)
target_compile_definitions(st_serial64 PRIVATE -DFENCE_COUNT=64)
add_executable(st_serial128 st_serial.cpp)
target_compile_definitions(st_serial128 PRIVATE -DFENCE_COUNT=128)
add_executable(st_serial256 st_serial.cpp)
target_compile_definitions(st_serial256 PRIVATE -DFENCE_COUNT=256)
